# iontrap-2qg

./: .gitignore  README.md
data/ion-trap/configs/default-go/: experiment.cfg  interaction.cfg  mode-0.cfg  mode-1.cfg  mode-2.cfg  mode-3.cfg  mode-4.cfg  mode-5.cfg  mode-6.cfg  solutions.cfg  trap.cfg
data/ion-trap/pulse/2-ion/: delta_list_2.npy  pulse_list_5_100_2_pair(0,1).npy
data/ion-trap/pulse/7-ion/: delta_list_7.npy  pulse_list_15_100_7_pair(3,4).npy
data/ion-trap/trap-parameters/: eta_list_2.npy  eta_list_7.npy  nu_list_2.npy  nu_list_7.npy
include/differential-evolution/: differential_evolution.hpp  individual.hpp  mutation_strategy.hpp  objective_function.h  population.hpp  processors.hpp  random_generator.hpp
include/qsd/: ACG.cpp  AtomOp.cpp  AtomOp.h  CmplxRan.cpp  CmplxRan.h  Complex.cpp  Complex.h  FieldOp.cpp  FieldOp.h  MLCG.cpp  Operator.cpp  Operator.h  PrimOp.cpp  PrimOp.h  SpinOp.cpp  SpinOp.h  State.cpp  State.h  Traject.cpp  Traject.h  qsd_experiment.h  qsd_simulation.cpp  qsd_simulation.h
src/: CMakeLists.txt
src/ion-trap/: .gitignore  CMakeLists.txt
src/ion-trap/experiment/: h_config.cpp  ion_trap.cpp  ion_trap.h  l_config.cpp  state_config.cpp  utilities.cpp  utilities.h
src/ion-trap/experiment/fidelity/: alpha_1_integrals.cpp  alpha_2_integrals.cpp  alpha_3_integrals.cpp  alpha_4_1_integrals.cpp  alpha_4_2_integrals.cpp  fidelity.cpp  fidelity.h  fidelity_integrals.h
src/ion-trap/ion-trap-adrianmichel/: main.cpp
src/ion-trap/ion-trap-odeint/: main.cpp
src/ion-trap/ion-trap-pagmo/: main.cpp
src/ion-trap/ion-trap-qsd-1.3.5/: main.cpp
src/ion-trap/ion-trap-qsd-1.3.5-mpi/: main.cpp
src/ion-trap/ion-trap-rl/: ddpg.py  ion_trap_env.py  main.cpp  ppo.py  trpo.py
src/qsd-playground/: CMakeLists.txt  main.cpp
